--- a/backup-app/res/layout/activity_login.xml
+++ b/backup-app/res/layout/activity_login.xml
@@ -39,7 +39,8 @@
        >
         	<LinearLayout
             	style="@style/LoginFormContainer"
-            	android:orientation="vertical" 
+            	android:orientation="vertical"
+                android:layout_centerInParent="true"
             	>
 
             	<EditText
@@ -109,6 +110,7 @@
                 	android:layout_gravity="center"
                 	android:textSize="15sp"
                 	android:paddingTop="10dp"
+                    android:visibility="gone"
                 	/>
             
             	<Button
@@ -120,6 +122,7 @@
                 	android:paddingRight="32dp"
                 	android:text="@string/create_user"
                 	android:layout_gravity="center"
+                    android:visibility="gone"
                 	/>
             
             	<Button
@@ -147,6 +150,7 @@
         	    android:layout_alignParentBottom="true"
         	    android:paddingBottom="7dp"
         	    android:textSize="12sp"
+                android:visibility="gone"
         	    />
     
     <TextView
