--- a/backup-app/res/layout/method_activity.xml
+++ b/backup-app/res/layout/method_activity.xml
@@ -1,86 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical">
+
+
     <LinearLayout
-        android:id="@+id/sstatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="gone" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <ProgressBar
-            style="?android:attr/progressBarStyleLarge"
+        <LinearLayout
+            android:id="@+id/sstatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp" />
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone" >
 
-        <TextView
-            android:id="@+id/status_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:fontFamily="sans-serif-light"
-            android:text="@string/progress"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            <ProgressBar
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp" />
+
+            <TextView
+                android:id="@+id/status_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:fontFamily="sans-serif-light"
+                android:text="@string/progress"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/bt_backup_vcf"
+            android:layout_height="100dip"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:text="@string/backup_vcard"
+            android:layout_margin="10dip"
+
+            />
+
+        <Button
+            android:id="@+id/bt_restore_vcf"
+            android:layout_height="100dip"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:text="@string/restore_vcard"
+            android:layout_margin="10dip"
+            />
+
+        <Button
+            android:id="@+id/bt_enable_wipe"
+            android:layout_height="100dip"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:text="@string/enable_wipe"
+            android:layout_margin="10dip"
+            />
+
+        <Button
+            android:id="@+id/bt_choose_sound"
+            android:layout_height="100dip"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:text="@string/choose_sound"
+            android:layout_margin="10dip"
+            />
+
+        <Button
+            android:id="@+id/bt_map_device"
+            android:layout_height="100dip"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:text="@string/map_new_device"
+            android:layout_margin="10dip"
+            android:visibility="gone"
+            />
+        <Button
+            android:id="@+id/bt_pictures_backup_button"
+            android:layout_height="100dip"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:text="@string/pictures_btn"
+            android:layout_margin="10dip"
+            />
+        <Button
+            android:id="@+id/restore_pictures"
+            android:layout_height="100dip"
+            android:padding="10dp"
+            android:layout_width="match_parent"
+            android:text="@string/restore_pictures"
+            android:layout_margin="10dip"
+            />
     </LinearLayout>
-    
-    <Button
-        android:id="@+id/bt_backup_vcf"
-        android:layout_height="70dip"
-        android:layout_width="match_parent"
-        android:text="@string/backup_vcard"
-        android:layout_margin="10dip"
-        />
-    
-    <Button
-        android:id="@+id/bt_restore_vcf"
-        android:layout_height="70dip"
-        android:layout_width="match_parent"
-        android:text="@string/restore_vcard"
-        android:layout_margin="10dip"
-        />
-    
-    <Button
-        android:id="@+id/bt_enable_wipe"
-        android:layout_height="70dip"
-        android:layout_width="match_parent"
-        android:text="@string/enable_wipe"
-        android:layout_margin="10dip"
-        />
-    
-    <Button
-        android:id="@+id/bt_choose_sound"
-        android:layout_height="70dip"
-        android:layout_width="match_parent"
-        android:text="@string/choose_sound"
-        android:layout_margin="10dip"
-        />
-    
-    <Button
-        android:id="@+id/bt_map_device"
-        android:layout_height="70dip"
-        android:layout_width="match_parent"
-        android:text="@string/map_new_device"
-        android:layout_margin="10dip"
-        android:visibility="gone"
-        />
-    <Button
-        android:id="@+id/bt_pictures_backup_button"
-        android:layout_height="70dip"
-        android:layout_width="match_parent"
-        android:text="@string/pictures_btn"
-        android:layout_margin="10dip"
-        />
-    <Button
-        android:id="@+id/restore_pictures"
-        android:layout_height="70dip"
-        android:layout_width="match_parent"
-        android:text="@string/restore_pictures"
-        android:layout_margin="10dip"
-        />
-</LinearLayout>
+
+    </ScrollView>
